packages/core/typography.pcss
.sds-typography {
  &-body {
    &--lead {
      font-size: var(--sds-typography-body-fontsize-lead);
      font-weight: var(--sds-typography-weight-regular);
      line-height: var(--sds-typography-body-lineheight-lead);
    }

    &--large {
      font-size: var(--sds-typography-body-fontsize-large);
      font-weight: var(--sds-typography-weight-regular);
      line-height: var(--sds-typography-body-lineheight-large);
    }

    &--regular {
      font-size: var(--sds-typography-body-fontsize-regular);
      font-weight: var(--sds-typography-weight-regular);
      line-height: var(--sds-typography-body-lineheight-regular);
    }

    &--small {
      font-size: var(--sds-typography-body-fontsize-small);
      font-weight: var(--sds-typography-weight-regular);
      line-height: var(--sds-typography-body-lineheight-small);
    }

    &--emphasis,
    &--quote {
      font-style: italic;
    }

    &--strong {
      font-weight: 600;
    }

    &--code {
      font-family: monospace;
    }
  }

  &-heading {
    &--huge {
      font-size: var(--sds-typography-heading-fontsize-huge);
      font-weight: var(--sds-typography-weight-bold);
      line-height: var(--sds-typography-heading-lineheight-huge);
    }

    &--xlarge {
      font-size: var(--sds-typography-heading-fontsize-xlarge);
      font-weight: var(--sds-typography-weight-bold);
      line-height: var(--sds-typography-heading-lineheight-xlarge);
    }

    &--large {
      font-size: var(--sds-typography-heading-fontsize-large);
      font-weight: var(--sds-typography-weight-bold);
      line-height: var(--sds-typography-heading-lineheight-large);
    }

    &--medium {
      font-size: var(--sds-typography-heading-fontsize-medium);
      font-weight: var(--sds-typography-weight-regular);
      line-height: var(--sds-typography-heading-lineheight-medium);
    }

    &--small {
      font-size: var(--sds-typography-heading-fontsize-small);
      font-weight: var(--sds-typography-weight-regular);
      line-height: var(--sds-typography-heading-lineheight-small);
    }

    &--paragraph {
      font-size: var(--sds-typography-heading-fontsize-paragraph);
      font-weight: var(--sds-typography-weight-bold);
      line-height: var(--sds-typography-heading-lineheight-paragraph);
    }

    &--overline {
      font-size: var(--sds-typography-heading-fontsize-overline);
      font-weight: var(--sds-typography-weight-bold);
      line-height: var(--sds-typography-heading-lineheight-overline);
      text-transform: uppercase;
    }
  }

  &-blockquote {
    font-size: var(--sds-typography-body-fontsize-lead);
    font-weight: var(--sds-typography-weight-regular);
    line-height: var(--sds-typography-body-lineheight-lead);
    margin: 0;
    padding-left: 48px;
    position: relative;

    &::before {
      content: open-quote;
      font-size: var(--sds-base-size-xl);
      position: absolute;
      top: calc(50% + 10px);
      margin-left: -48px;
    }

    &__quote {
      margin: 0;
    }
  }

  &-link {
    --link-icon-size: var(--sds-base-size-m);
    --link-icon-margin: var(--sds-space-gap-minimal);

    color: var(--sds-color-text-primary);
    display: inline-flex;
    gap: var(--link-icon-margin);
    text-decoration: underline;
    text-underline-position: under;

    &::after,
    &::before {
      background-color: var(--sds-color-text-primary);
    }

    &:hover,
    &:focus-visible {
      background-color: var(
        --sds-color-interaction-primary-transparent-highlight
      );
    }

    &:active {
      background-color: var(
        --sds-color-interaction-primary-transparent-pressed
      );
    }

    &:focus-visible {
      outline: var(--sds-focus-outline);
      outline-offset: 0;
    }

    &[target="_blank"],
    &--external,
    &--navigation {
      &::after {
        content: "";
        display: inline-block;
        mask-position: center right;
        mask-repeat: no-repeat;
        mask-size: var(--link-icon-size);
        min-width: var(--link-icon-size);
        min-height: var(--link-icon-size);
        width: var(--link-icon-size);
        height: var(--link-icon-size);
      }
    }

    &[target="_blank"],
    &--external {
      &::after {
        mask-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 256 256"><path d="M224,100a8,8,0,0,1-16,0V59.3l-58.4,58.4A8,8,0,0,1,144,120a8.3,8.3,0,0,1-5.7-2.3,8,8,0,0,1,0-11.3L196.7,48H156a8,8,0,0,1,0-16h60a8,8,0,0,1,8,8Zm-40,36a8,8,0,0,0-8,8v64H48V80h64a8,8,0,0,0,0-16H48A16,16,0,0,0,32,80V208a16,16,0,0,0,16,16H176a16,16,0,0,0,16-16V144A8,8,0,0,0,184,136Z"/></svg>');
      }
    }

    &--navigation {
      &::after {
        mask-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 256 256" fill="currentColor"><path d="M128,24A104,104,0,1,0,232,128,104.11,104.11,0,0,0,128,24Zm0,192a88,88,0,1,1,88-88A88.1,88.1,0,0,1,128,216Zm45.66-93.66a8,8,0,0,1,0,11.32l-32,32a8,8,0,0,1-11.32-11.32L148.69,136H88a8,8,0,0,1,0-16h60.69l-18.35-18.34a8,8,0,0,1,11.32-11.32Z"/></svg>');
      }
    }

    &[href^="mailto:"],
    &[href^="tel:"] {
      &::before {
        content: "";
        display: inline-block;
        mask-position: center left;
        mask-repeat: no-repeat;
        mask-size: var(--link-icon-size);
        min-width: var(--link-icon-size);
        min-height: var(--link-icon-size);
        width: var(--link-icon-size);
        height: var(--link-icon-size);
      }
    }

    &[href^="mailto:"] {
      &::before {
        mask-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 256 256"><path d="M224,48H32a8,8,0,0,0-8,8V192a16,16,0,0,0,16,16H216a16,16,0,0,0,16-16V56A8,8,0,0,0,224,48ZM203.4,64,128,133.1,52.6,64ZM216,192H40V74.2l82.6,75.7a8,8,0,0,0,10.8,0L216,74.2V192Z"/></svg>');
      }
    }

    &[href^="tel:"] {
      &::before {
        mask-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 256 256"><path d="M176,224C96.6,224,32,159.4,32,80A56.2,56.2,0,0,1,80.9,24.4,16.3,16.3,0,0,1,97.6,34l20.1,46.9A15.9,15.9,0,0,1,116.3,96L99.7,121.4h0a76.5,76.5,0,0,0,35.2,35L160,139.7a15.6,15.6,0,0,1,15.1-1.3l46.9,20a16.3,16.3,0,0,1,9.6,16.7A56.2,56.2,0,0,1,176,224ZM82.9,40.3A40,40,0,0,0,48,80,128.1,128.1,0,0,0,176,208a40,40,0,0,0,39.7-34.9l-46.9-20-25,16.7a16,16,0,0,1-15.7,1.1,92.5,92.5,0,0,1-42.8-42.6,16,16,0,0,1,1-15.7L103,87.2ZM135,156.5Z"/></svg>');
      }
    }

    &--no-icon {
      &[target="_blank"] {
        &::after {
          content: unset;
          mask-image: unset;
          margin: unset;
          min-width: unset;
          min-height: unset;
          width: unset;
          height: unset;
        }
      }

      &[href^="mailto:"],
      &[href^="tel:"] {
        &::before {
          content: unset;
          mask-image: unset;
          margin: unset;
          min-width: unset;
          min-height: unset;
          width: unset;
          height: unset;
        }
      }
    }
  }

  &-abbr {
    position: relative;
    text-decoration: underline dotted;
    text-underline-position: under;

    &:focus,
    &:hover {
      background-color: var(
        --sds-color-interaction-primary-transparent-highlight
      );

      &::after {
        --typography-abbr-border-width: var(--sds-space-border-weight-thin);

        background-color: var(--sds-color-layout-background-default);
        color: var(--sds-color-text-primary);
        border: solid var(--typography-abbr-border-width)
          var(--sds-color-layout-divider-strong);
        border-radius: var(--sds-space-border-radius-small);
        content: attr(data-title);
        padding: var(--sds-space-padding-minimal) var(--sds-space-padding-tiny);
        position: absolute;
        left: calc(var(--typography-abbr-border-width) * -1);
        top: -2em;
        text-decoration: none;
        white-space: nowrap;
        width: auto;
      }
    }

    &:focus-visible {
      outline: var(--sds-focus-outline);
      outline-offset: 0;
    }
  }
}

